Re-enable fixed positioning for header in main.css and set top and left properties for proper alignment.

--- a/main.css
+++ b/main.css
@@ -40,7 +40,9 @@ body {
 
 /* HEADER STYLING */
 header {
-  /* position: fixed; */
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 90px;
   width: 100%;
   display: flex;
